test/types/single/sungeun/invalid_write.good
invalid_write.chpl:14: error: halt reached - single var already defined
